# dynstack

./: .gitignore  LICENSE  README.md
publications/: README.md
publications/Internship Blog - HeuristicLab Mitter/: Internship Blog - HeuristicLab Mitter.md
simulation/: README.md  simulation.sln
simulation/DynStack.DataModel/: DynStack.DataModel.csproj
simulation/DynStack.DataModel/CS/: CSDataModel.cs  Settings.cs
simulation/DynStack.DataModel/Common/: Enums.cs  IBlock.cs  ICrane.cs  ICraneSchedule.cs  ILocation.cs  IMove.cs  IMoveRequest.cs  IPerformance.cs  ISerializable.cs  ISettings.cs  IStack.cs  IStackingWorld.cs  IWorld.cs  SerializableExtensions.cs  TimeStamp.cs
simulation/DynStack.DataModel/HS/: HSDataModel.cs  (+1 more)
simulation/DynStack.Simulation/: DynStack.Simulation.csproj
simulation/DynStack.SimulationRunner/: DynStack.SimulationRunner.csproj  Program.cs
starterkits/: .gitignore  cranescheduling_model.proto  hotstorage_model.proto  rollingmill_model.proto
starterkits/cpp/: CMakeLists.txt  Readme.md
starterkits/cpp/src/: stacking.cc
starterkits/cpp/src/cranescheduling/: cranescheduling_model.pb.cc  cranescheduling_model.pb.h  heuristic.cc  heuristic.h
starterkits/cpp/src/hotstorage/: heuristic.cc  heuristic.h  hotstorage_model.pb.cc  hotstorage_model.pb.h
starterkits/cpp/src/rollingmill/: heuristic.cc  heuristic.h  rollingmill_model.pb.cc  rollingmill_model.pb.h
starterkits/csharp/: Program.cs  Readme.md  csharp.csproj  csharp.sln
starterkits/python/: Readme.md  stacking.py
starterkits/rust/: Cargo.toml  Readme.md  build.rs
(+97 files in other folders)
